<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_trips">No Trips Found..</string>
    <string name="add_trip">New Trip</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="app_name">GoDutch</string>
    <string name="trip_detail_form_title">Trip Details</string>
    <string name="trip_detail_field_name">Name :</string>
    <string name="trip_detail_field_description">Description :</string>
    <string name="trip_detail_form_startdate">Start Date :</string>
    <string name="trip_detail_button_add">Add</string>
    <string name="trip_detail_button_cancel">Cancel</string>
</resources>
