<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="fill_parent" android:orientation="vertical">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

		<TableLayout android:id="@+id/tableLayout1"
			android:layout_height="match_parent" android:layout_width="match_parent" android:gravity="top">
			
			<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:baselineAligned="false">
				<TextView android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/textView1" android:text="@string/trip_detail_field_name"
					android:layout_height="match_parent" android:layout_width="@dimen/label_width"
					android:layout_gravity="center_vertical" android:layout_marginTop="10dip"></TextView>
				<EditText android:layout_weight="1" android:layout_width="match_parent"
					android:id="@+id/editText1" android:layout_height="match_parent"
					android:layout_marginLeft="5dip" android:layout_marginRight="5dip"
					android:layout_marginTop="2dip">
					<requestFocus></requestFocus>
				</EditText>
			</TableRow>
			<TableRow android:id="@+id/tableRow2" android:layout_height="wrap_content"
				android:layout_width="match_parent" android:layout_weight="0">
				<TextView android:layout_width="@dimen/label_width"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/textView2" android:text="@string/trip_detail_field_description"
					android:layout_height="match_parent" android:layout_marginTop="10dip"></TextView>
				<EditText android:layout_width="match_parent" android:id="@+id/editText2"
					android:layout_height="wrap_content" android:layout_marginLeft="5dip" android:layout_marginRight="5dip"
					android:layout_marginTop="2dip" android:layout_weight="1"></EditText>
			</TableRow>
			<TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content"
				android:layout_width="match_parent">
				<TextView android:layout_width="@dimen/label_width"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/textView3" android:text="@string/trip_detail_form_startdate"
					android:layout_height="match_parent" android:layout_marginTop="10dip"
					android:layout_marginBottom="10dip"></TextView>
			</TableRow>
		</TableLayout>
	</LinearLayout>

	<DatePicker android:id="@+id/datePicker1" android:layout_height="fill_parent" android:layout_width="fill_parent"
		 android:layout_marginTop="10dip" android:layout_weight="1" android:layout_gravity="top">
	</DatePicker>

	<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout1">
		<Button android:layout_marginTop="30dip" android:layout_height="wrap_content" android:text="@string/trip_detail_button_add"
			android:id="@+id/button1" android:layout_width="wrap_content" android:layout_weight="1"></Button>
		<Button android:layout_height="wrap_content"
			android:text="@string/trip_detail_button_cancel" android:id="@+id/button2"
			android:layout_width="wrap_content" android:layout_marginTop="30dip" android:layout_weight="1"></Button>
	</LinearLayout>
</LinearLayout>
